typescript/checker/tests/conformance/es6/modules/exportsAndImportsWithUnderscores4.ts.stderr
error: ResolvedFailed {
    span: Span {
        lo: BytePos(
            506,
        ),
        hi: BytePos(
            570,
        ),
        ctxt: #0,
    },
    base: "$DIR/tests/conformance/es6/modules",
    src: Atom('./m1' type=inline),
}
  --> $DIR/tests/conformance/es6/modules/exportsAndImportsWithUnderscores4.ts:29:1
   |
29 | import {_, __, ___hello, __esmodule, __proto, _hi}  from "./m1";
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

